demos/onecommute/force-app/main/default/objects/OneCommute_Trip_Count__c/OneCommute_Trip_Count__c.object-meta.xml
<CustomObject>
    <description>OneCommute demo driveway or trip-count summary row.</description>
    <label>OneCommute Trip Count</label>
    <nameField>
        <label>Trip Count Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OneCommute Trip Counts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>