demos/onecommute/force-app/main/default/objects/OneCommute_Trip_Count__c/fields/AM_Peak__c.field-meta.xml
<CustomField>
    <fullName>AM_Peak__c</fullName>
    <label>AM Peak</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>