demos/onecommute/force-app/main/default/objects/OneCommute_Trip_Count__c/fields/Daily_Average__c.field-meta.xml
<CustomField>
    <fullName>Daily_Average__c</fullName>
    <label>Daily Average</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>