demos/onecommute/force-app/main/default/objects/OneCommute_Trip_Count__c/fields/PM_Peak__c.field-meta.xml
<CustomField>
    <fullName>PM_Peak__c</fullName>
    <label>PM Peak</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>