demos/onecommute/force-app/main/default/objects/OneCommute_Trip_Count__c/listViews/Demo_Trip_Counts.listView-meta.xml
<ListView>
    <fullName>Demo_Trip_Counts</fullName>
    <columns>NAME</columns>
    <columns>Site__c</columns>
    <columns>Location__c</columns>
    <columns>Direction__c</columns>
    <columns>Daily_Average__c</columns>
    <columns>Midweek_Average__c</columns>
    <filterScope>Everything</filterScope>
    <label>Demo Trip Counts</label>
</ListView>